bluec-tests/tests/invalid/types_bool/conflicting_global_types.c
_Bool foo = 1;

long foo;

int main(void) {
    return foo;
}